2000-10-16  Kriston J. Rehberg  <Kriston@AOL.NET>

	* tcl/init.tcl:  Initialize errorCode and errorInfo like tclsh
	does.  From ArsDigita.

	* nsd/nsd.h, nsd/tclcmds.c, nsd/tclvar.c: nsv_names Tcl command
	lists names of nsv's in memory.

	* tcl8.3.2: The complete Tcl 8.x distributions are now included.
	They aren't installed with AOLserver's "gmake install", but you
	can install them manually if you want to use them for the i18n
	encodings and stuff like that.  It will install into the
	"lib/tcl8.3" directory of the binary distribution with AOLserver
	3.3 and later.

	* nsd/nsmain.c (Ns_Main): Had to move Ns_ThreadSetName below the
	stdin/stdout/stderr reassignment to fix a fd problem with running
	nsd on Irix in "installed" or "daemon" mode that would prevent the
	server from starting up.  Sigh.
	(Ns_Main): Took out little note about -k|-K being deprecated.

2000-10-13  Kriston J. Rehberg  <Kriston@AOL.NET>

	* nsd/nsmain.c (Ns_Main): gid of the specified user is set even if
	it's not specified.
	(UsageError): -K and -k give a "deprecated" warning.
	(Ns_Main): -f gives a "deprecated" warning.

	* nsd/binder.c (PreBind): Didn't really tell us if it was
	successful at pre-binding.  Helpful to know if you're wondering
	what happened to that port you wanted to pre-bind.
	(Binder): backlog variables (2) initialized to nsconf.backlog.

	* nssock/sock.cpp, nsd/return.c: Made an attempt at standardizing
	the error codes and error page content.
	
2000-10-13  Jim Davidson
	
	* sproc.cpp: Fixed Wakeup() error message and update child's
	sproc pid after fork.

	* nsd/random.c: Put back log message when generating seeds.

	* nsd/nsconf.c: Fixed memory overwrite bug in stats and increased
	the default buffer value.

	* nsd/keepalive.c: Fixed array overwrite with maxkeep=0 bug.
	
	* nsd/tclkeylist.c: A more modern version added that's compatible
	with Tcl 8.3.2 (nsd8x).

	* nsd/stamp.c: Forces the build date reported by AOLserver to be